--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,15 +1,29 @@
-contourpy==1.3.0
-cycler==0.12.1
-fonttools==4.53.1
-kiwisolver==1.4.7
-matplotlib==3.9.2
+attrs==24.2.0
+certifi==2024.8.30
+cffi==1.17.1
+dnspython==2.6.1
+et-xmlfile==1.1.0
+h11==0.14.0
+idna==3.8
 numpy==2.1.1
-packaging==24.1
+openpyxl==3.1.5
+outcome==1.3.0.post0
 pandas==2.2.2
-pillow==10.4.0
-psycopg2-binary==2.9.9
-pyparsing==3.1.4
+pycparser==2.22
+pymongo==4.8.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+selenium==4.24.0
+setuptools==72.1.0
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.26.2
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.2
+websocket-client==1.8.0
+wheel==0.44.0
+wsproto==1.2.0
